# L-GIREMI

./: .gitignore  README.md  get_read_mismatch.py  giremil.py  l-giremi  l-giremi.py  pyproject.toml  setup.py
giremi/: fileio.py  footprint.py  mismatch.py  mutual_information.py  stat.py  strand.py
script/: calculate_site_splice_mi.py  correct_splice_site.py  get_aei.py  get_read_intron.py  get_read_mismatch.py  get_read_site.py  get_read_splice.py  split_bam_by_site.py
src/giremi/: __init__.py  cs.py  fileio.py  footprint.py  mismatch.py  strand.py  utils.py
src/giremi/script/: calculate_site_splice_mi.py  correct_read_strand.py  correct_splice_site.py  get_aei.py  get_aei_short.py  get_read_intron.py  get_read_mismatch.py  get_read_site.py  get_read_splice.py  giremi.py  split_bam_by_site.py
